--- a/templates/index.html
+++ b/templates/index.html
@@ -12,8 +12,7 @@
     <nav>
         <img src="/static/images/Findmyspares.com.png" alt="Navbar Logo">
         <ul>
-            <li><button type="button" id="button" onclick="window.location.href='/Models';">Search by Model</button></li>
-            <li><button type="button" id="button" onclick="window.location.href='/Login';">Log In</button></li>
+            <li><a href="https://wa.me/0714359080" target="_blank"><button type="button" id="button">Make a request</button></a></li>            <li><button type="button" id="button" onclick="window.location.href='/Login';">Log In</button></li>
             <li><button type="button" id="button1" onclick="window.location.href='/Signup';">Sign Up</button></li>
             <li><button type="button" id="button2" onclick="window.location.href='/logout';">Log Out</button></li>
         </ul>
@@ -27,10 +26,10 @@
     <section>
         <div>
             <form action="{{ url_for('search_model') }}" method="post">
-                <input type="text" name="search_query" placeholder="Enter part number/Car Model">
+                <input type="text" name="search_query" placeholder="Enter part number">
                 <button type="submit"><img src="/static/images/search.png" alt="Search"></button>
             </form>
-        </div>
+          </div>
     </section>
 
     <footer>
