added session checking for user and fixed orders

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -213,6 +213,7 @@
     $('#view-all-orders').click(function (e) {
         e.preventDefault();
         fetchOrders();
+        window.location.href = '/track-order';
     });
 </script>
 
