wame number fixed

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
     <nav>
         <img src="/static/images/Findmyspares.com.png" alt="Navbar Logo">
         <ul>
-            <li><a href="https://wa.me/0714359080" target="_blank"><button type="button" id="button">Make a request</button></a></li>            <li><button type="button" id="button" onclick="window.location.href='/Login';">Log In</button></li>
+            <li><a href="https://wa.me/+254714359080" target="_blank"><button type="button" id="button">Make a request</button></a></li>            <li><button type="button" id="button" onclick="window.location.href='/Login';">Log In</button></li>
             <li><button type="button" id="button1" onclick="window.location.href='/Signup';">Sign Up</button></li>
             <li><button type="button" id="button2" onclick="window.location.href='/logout';">Log Out</button></li>
         </ul>
